Added daily Joke

--- a/dailyJoke.html
+++ b/dailyJoke.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Coffee Manager</title>
+    <title>Daily Joke</title>
   </head>
   <body class="bg-secondary">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -14,7 +14,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/dailyJoke.html">Daily Joke</a>
+            <a class="nav-item nav-link active" href="/dailyJoke.html">Daily Joke</a>
           </div>
         </div>
       </nav>
