Fix Body Element

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Coffee Manager</title>
   </head>
-  <body)>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/index.html">Coffee Manager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,8 +24,8 @@
             <div class="card m-3">
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">Coffee name</h5>
+                  <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-dark btn-block">Select Coffee</a>
                 </div>
             </div>
@@ -34,8 +34,8 @@
             <div class="card m-3">
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">Coffee name</h5>
+                  <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-dark btn-block">Select Coffee</a>
                 </div>
             </div>
@@ -44,8 +44,8 @@
             <div class="card m-3">
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">Coffee name</h5>
+                  <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-dark btn-block">Select Coffee</a>
                 </div>
             </div>
@@ -56,8 +56,8 @@
               <div class="card m-3">
                   <img class="card-img-top" src="..." alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Coffee name</h5>
+                    <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-dark btn-block">Select Coffee</a>
                   </div>
               </div>
@@ -66,8 +66,8 @@
               <div class="card m-3">
                   <img class="card-img-top" src="..." alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Coffee name</h5>
+                    <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-dark btn-block">Select Coffee</a>
                   </div>
               </div>
@@ -76,8 +76,8 @@
               <div class="card m-3">
                   <img class="card-img-top" src="..." alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Coffee name</h5>
+                    <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-dark btn-block">Select Coffee</a>
                   </div>
               </div>
