Add Top Coffee Table

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Coffee Manager</title>
   </head>
@@ -19,6 +20,21 @@
         </div>
       </nav>
       <div class="container mt-4">
+        <h3 class="h5 top-coffee-title">My Top Coffees</h2>
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Position</th>
+                <th scope="col">Coffee Name</th>
+                <th scope="col">Count</th>
+                <th scope="col">Total Price</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <p class="text-center">No Entries in the Table</p>
+        <h3 class="h5 coffee-cards-heading">Coffee List</h2>
         <div class="row">
           <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="card m-3">
