--- a/dailyJoke.html
+++ b/dailyJoke.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <img src="chuck.png" class="img-fluid chuck-norris-image p-4 m-4" alt="Chuck Norris">
+                <img src="pictures/chuck.png" class="img-fluid chuck-norris-image p-4 m-4" alt="Chuck Norris">
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="bubble bubble-bottom-left mt-5" id="daily-joke">
