--- a/index.html
+++ b/index.html
@@ -42,30 +42,30 @@
         <div class="row">
           <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="card m-3">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="pictures/Cappuccino.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Coffee name</h5>
-                  <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">Cappuccino</h5>
+                  <p class="card-text">Jeden z nejpopulárnějších kávových nápojů také pochází z Itálie. Skládá se z espressa, mléka a mléčné pěny. Správně připravené cappuccino poznáte podle povrchu s krémově mléčnou pěnou bez viditelných bublinek.</p>
                   <a class="btn btn-dark btn-block text-white" onclick="selectCoffee(1)">Select Coffee</a>
                 </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="card m-3">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="pictures/Coffee.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Coffee name</h5>
-                  <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">Coffee</h5>
+                  <p class="card-text">Káva je nápoj z upražených a rozemletých semen plodů kávovníku. Označují se tak i samotná semena, případně semena rozemletá na prášek.</p>
                   <a class="btn btn-dark btn-block text-white" onclick="selectCoffee(2)">Select Coffee</a>
                 </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="card m-3">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="pictures/Espresso.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Coffee name</h5>
-                  <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">Espresso</h5>
+                  <p class="card-text">Správné espresso se připravuje ze 7–14 gramů kávy pod tlakem aspoň 9 barů. Extrakce trvá plus minus 30 vteřin a teplota vody se pohybuje kolem 90 stupňů. Varu nikdy nesmí dosáhnout.</p>
                   <a class="btn btn-dark btn-block text-white" onclick="selectCoffee(3)">Select Coffee</a>
                 </div>
             </div>
@@ -74,30 +74,30 @@
         <div class="row">
             <div class="col-lg-4 col-md-12 col-sm-12">
               <div class="card m-3">
-                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <img class="card-img-top" src="pictures/FlatWhite.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Coffee name</h5>
-                    <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">FlatWhite</h5>
+                    <p class="card-text">Flat white znamená více kávy, méně mléka, to vše dohromady silnou a bohatou chuť určenou především kávovým milovníkům. </p>
                     <a class="btn btn-dark btn-block text-white" onclick="selectCoffee(4)">Select Coffee</a>
                   </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-12 col-sm-12">
               <div class="card m-3">
-                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <img class="card-img-top" src="pictures/Latte.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Coffee name</h5>
-                    <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Latte</h5>
+                    <p class="card-text">Fandíte slabší kávě s mlékem? Pak bude latté tou pravou volbou. Podává se ve větším šálku než cappuccino a má i více mléčné pěny</p>
                     <a class="btn btn-dark btn-block text-white" onclick="selectCoffee(5)">Select Coffee</a>
                   </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-12 col-sm-12">
               <div class="card m-3">
-                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <img class="card-img-top" src="pictures/Ristrtto.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Coffee name</h5>
-                    <p class="card-text">Some quick example text to build on the Coffee name and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Ristretto</h5>
+                    <p class="card-text">Ristretto, původem z jižní Itálie, se připravuje ze stejné dávky kávy jako klasické espresso. Používají se však jemněji mletá zrnka, aby při délce průtoku 25 vteřin nateklo jen 20 ml nápoje. Díky tomu získává ristretto nejsilnější kávové extrakty. Italové vypijí klidně 5 až 6 šálků za den.</p>
                     <a class="btn btn-dark btn-block text-white" onclick="selectCoffee(6)">Select Coffee</a>
                   </div>
               </div>
